--- a/docs/Tourism/css/share.css
+++ b/docs/Tourism/css/share.css
@@ -65,7 +65,7 @@ nav a {
   font-size: 14px;
 }
 nav .g:hover {
-  background-color:#BC3E1E;
+  background-color:#3C871C;
   color: #FCF9F9;
 }
 nav .o:hover {
