--- a/docs/Tourism/css/share.css
+++ b/docs/Tourism/css/share.css
@@ -65,11 +65,11 @@ nav a {
   font-size: 14px;
 }
 nav .g:hover {
-  background-color:#3C871C;
+  background-color:#BC3E1E;
   color: #FCF9F9;
 }
 nav .o:hover {
-  background-color: #79b95a;
+  background-color: #3C871C;
   color: #FCF9F9
 }
 
