--- a/docs/index/parallax.css
+++ b/docs/index/parallax.css
@@ -10,56 +10,33 @@
 .key_container{
     width: 100vw;
     height: 100vh;
-    position: relative;
-
     .key_layer{
         width: 100vw;
         height: 100vh;
         background-size: auto 100vh;
-         background-size: cover;
+        background-size: cover;
         background-position: bottom center;
-        position: fixed;
-
-        /* border: rgb(41, 81, 81) 2px solid; */
-        will-change: transform;
+        position:fixed;
     }
-
-    #parallax1{
-        /* border: rgb(221, 48, 236) 2px solid; */
-    }
-
-    #parallax2{
-        transform: translateX(-100vw);
-        transition: transform 0.3s ease-out;
-        /* border: rgb(236, 208, 48) 2px solid; */
-    }
-    
 }
 
 /* ##############背景圖檔############## */
-#parallax0{
-    background-image: url(../Tourism/webimg/newloadppp/底圖0.png);
-    /* border: #0ee 2px solid; */
-}
-#parallax3{
-    background-image: url(../Tourism/webimg/newloadppp/小實驗瓶.png);
-}
-#parallax4{
-    background-image: url(../Tourism/webimg/newloadppp/中實驗瓶.png);
-}
-#parallax5{
-    background-image: url(../Tourism/webimg/newloadppp/大實驗瓶.png);
-}
-#parallax6{
-    background-image: url(../Tourism/webimg/newloadppp/透明標題.png);
-}
-#finalImage{
-    background-image: url(../Tourism/webimg/newloadppp/角色.png);
+#parallax0{background-image: url(./Tourism/webimg/newloadppp/1.svg);}
+#parallax1{background-image: url(./Tourism/webimg/newloadppp/2.svg);}
+#parallax2{background-image: url(./Tourism/webimg/newloadppp/3.svg);}
+#parallax3{background-image: url(./Tourism/webimg/newloadppp/4.svg);}
+#parallax4{background-image: url(./Tourism/webimg/newloadppp/5.svg);}
+#parallax5{background-image: url(./Tourism/webimg/newloadppp/6.svg);}
+#parallax6{background-image: url(./Tourism/webimg/newloadppp/7.svg);}
+#finalImage{background-image: url(../Tourism/webimg/newloadppp/finalimg.gif);}
+.after{
+    background-color: #08070715;
+    height: 1000px;;
 }
 
-.after{
-    background-color: #3c871c;
-    height: 1800px;
+/* 檢查透明問題 */
+.key_layer {
+    background-color: rgb(242, 242, 242); 
 }
 
 .final_image {
@@ -68,11 +45,11 @@
     position: fixed;
     top: 0;
     left: 0;
-    background-image: url(../Tourism/webimg/newloadppp/大實驗瓶.png); /* 請替換為你的圖片路徑 */
+    /* background-image: url(../Tourism/webimg/newloadppp/大實驗瓶.png); 請替換為你的圖片路徑 */
     background-size: cover;
     background-position: center;
     opacity: 0; /* 初始透明度為 0 */
-    transition: opacity 1.5s ease-in-out; /* 平滑過渡效果 */
+    transition: opacity 1.0s ease-in-out; /* 平滑過渡效果 */
     pointer-events: none; /* 防止影響點擊事件 */
 }
 
@@ -87,6 +64,23 @@
     100% { transform: translate(-50%, 0) rotate(-1deg); }
 }
 
+@keyframes opa{
+    0% { opacity: 0.3; }
+    100% { opacity: 1; }
+}
+
+#parallax0 p{
+    background-color: #e4f4f4; 
+    color: #45362e;
+    font-size: 12px;
+    padding: 8px;
+    border-radius: 50px;
+    position: fixed;
+    top:85%;
+    left:50%;
+    transform: translate(-50%, 0);
+    animation: opa 1s infinite alternate; /* 2秒循環播放 */
+}
 
 .final_button {
     position: absolute;
