--- a/docs/index/parallax.css
+++ b/docs/index/parallax.css
@@ -21,13 +21,13 @@
 }
 
 /* ##############背景圖檔############## */
-#parallax0{background-image: url(./Tourism/webimg/newloadppp/1.svg);}
-#parallax1{background-image: url(./Tourism/webimg/newloadppp/2.svg);}
-#parallax2{background-image: url(./Tourism/webimg/newloadppp/3.svg);}
-#parallax3{background-image: url(./Tourism/webimg/newloadppp/4.svg);}
-#parallax4{background-image: url(./Tourism/webimg/newloadppp/5.svg);}
-#parallax5{background-image: url(./Tourism/webimg/newloadppp/6.svg);}
-#parallax6{background-image: url(./Tourism/webimg/newloadppp/7.svg);}
+#parallax0{background-image: url(../Tourism/webimg/newloadppp/1.svg);}
+#parallax1{background-image: url(../Tourism/webimg/newloadppp/2.svg);}
+#parallax2{background-image: url(../Tourism/webimg/newloadppp/3.svg);}
+#parallax3{background-image: url(../Tourism/webimg/newloadppp/4.svg);}
+#parallax4{background-image: url(../Tourism/webimg/newloadppp/5.svg);}
+#parallax5{background-image: url(../Tourism/webimg/newloadppp/6.svg);}
+#parallax6{background-image: url(../Tourism/webimg/newloadppp/7.svg);}
 #finalImage{background-image: url(../Tourism/webimg/newloadppp/finalimg.gif);}
 .after{
     background-color: #08070715;
